--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,29 +7,103 @@ terraform_config: &terraform_config
   environment:
     BASH_ENV: /root/.bashrc
 
+export_access_keys: &export_access_keys
+  run:
+    name: export access keys
+    command: |
+      cd && touch $BASH_ENV
+      echo 'export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY' >> $BASH_ENV
+      echo 'export AWS_SECRECT_ACCESS_KEY=$AWS_SECRET_KEY' >> $BASH_ENV
+      echo 'export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION' >> $BASH_ENV
+
+export_prod_env: &export_prod_env
+  run:
+    name: export prod env
+    command: |
+      cd && touch $BASH_ENV
+      echo 'export ENV=prod' >> $BASH_ENV
+
+export_preprod_env: &export_preprod_env
+  run:
+    name: export preprod env
+    command: |
+      cd && touch $BASH_ENV
+      echo 'export ENV=preprod' >> $BASH_ENV
+
+terraform_init: &terraform_init  
+  run:
+    name: terraform init
+    command: |
+      source $BASH_ENV
+      terraform init --backend=true --backend-config=environments/$ENV/backend.tfvars
+
+terraform_plan: &terraform_plan  
+  run:
+    name: terraform plan
+    command: |
+      source $BASH_ENV
+      terraform plan --var-file=environments/$ENV/variables.tfvars
+
+terraform_apply: &terraform_apply  
+  run:
+    name: terraform apply
+    command: |
+      source $BASH_ENV
+      terraform apply -auto-approve --var-file=environments/$ENV/variables.tfvars
+
 jobs:
-  deploy:
+  preprod_deploy:
     <<: *terraform_config
     steps:
       - checkout
-      - run:
-          name: export access keys
-          command: |
-            cd && touch $BASH_ENV
-            echo 'export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY' >> $BASH_ENV
-            echo 'export AWS_SECRECT_ACCESS_KEY=$AWS_SECRET_KEY' >> $BASH_ENV
-            echo 'export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION' >> $BASH_ENV
+      - *export_access_keys
+      - *export_preprod_env
+      - *terraform_init
+      - *terraform_plan
+      - *terraform_apply
 
-      - run:
-          name: terraform script
-          command: |
-            source $BASH_ENV
-            terraform init --backend=true --backend-config=environments/preprod/backend.tfvars
-            terraform plan --var-file=environments/preprod/variables.tfvars
-            terraform apply -auto-approve --var-file=environments/preprod/variables.tfvars
+  prod_deploy:
+    <<: *terraform_config
+    steps:
+      - checkout
+      - *export_access_keys
+      - *export_prod_env
+      - *terraform_init
+      - *terraform_plan
+      - *terraform_apply
+
+  test_plan:
+    <<: *terraform_config
+    steps:
+      - checkout
+      - *export_access_keys
+      - *export_preprod_env
+      - *terraform_init
+      - *terraform_plan
+
+
 
 workflows:
   version: 1
-  deploy-terraform:
+  deploy-terraform-preprod:
     jobs:
-      - deploy
+      - preprod_deploy:
+          filters:
+            branches:
+              only: master
+
+  deploy-terraform-prod:
+    jobs:
+      - prod_deploy:
+          filters:
+            branches:
+              only: release
+
+  test-terraform-plan:
+    jobs:
+      - test_plan:
+          filters:
+            branches:
+              ignore: 
+                - release
+                - master
